[package]
name = "rupphash"
version = "0.4.2"
edition = "2024"
license = "GPL-3.0"
authors = ["Sami Farin"]

[dependencies]
rand = "0.9"
image = "0.25"
#image-extras = "0.1"
image-extras = { git = "https://github.com/image-rs/image-extras", branch = "main" }
rustdct = "0.7"
transpose = "0.2"
walkdir = "2.5.0"
zerocopy = "0.8.31"
rayon = "1.11.0"
lmdb = "0.8"
blake3 = "1.5"
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
toml = "0.9"
getrandom = "0.3.4"
ratatui = "0.29"
crossterm = "0.29"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
trash = "5.2"
jiff = { version = "0.2", features = ["serde"] }
unicode-width = "0.2"
crossbeam-channel = "0.5"

# GUI
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
font-loader = "0.11.0"
rsraw = { git = "https://github.com/Safari77/rsraw", branch = "process_flags" }
kamadak-exif = "0.6.1"
natord = "1.0.9"
chacha20poly1305 = "0.10.1"
fast_image_resize = "5.4"

[profile.release]
opt-level = 3
debug = true
lto = false

[[bin]]
name = "phdupes"
path = "src/phdupes.rs"

[[bin]]
name = "phash_test"
path = "src/phash_test.rs"

