[package]
name = "rupphash"
version = "0.4.2"
edition = "2024"
license = "GPL-3.0"
authors = ["Sami Farin"]
rust-version = "1.88"
repository = "https://github.com/Safari77/rupphash"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
chacha20poly1305 = "0.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
codes-iso-3166 = { version = "0.1", features = ["part_2"] }
country-boundaries = "1.2.0"
crossbeam-channel = "0.5"
crossterm = "0.29"
dirs = "6"
fast_image_resize = "5.4"
filetime = "0.2.26"
file-id = "0.2.3"
flate2 = { version = "1.1", features = ["rust_backend"], default-features = false }
geo = { version = "0.32", features = ["serde"] }
getrandom = "0.3.4"
hex = "0.4"
image-extras = { git = "https://github.com/image-rs/image-extras", branch = "main" }
image = { version = "0.25", features = ["avif-native"] }
jiff = { version = "0.2", features = ["serde"] }
jpeg-decoder = "0.3.2"
kamadak-exif = "0.6.1"
libc = "0.2"
libheif-rs = { version = "2.5", features = ["image"] }
lmdb-rkv = { git = "https://github.com/Safari77/lmdb-rs-mozilla" }
natord = "1.0.9"
nix = { version = "0", features = ["fs", "user"] }
notify = "8.2"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.9"
ratatui = "0.29"
rayon = "1.11.0"
regex = "1.12"
rsraw = { git = "https://github.com/Safari77/rsraw", branch = "process_flags" }
rustc-hash = "2.1.1"
rustdct = "0.7"
serde = { version = "1.0", features = ["derive"] }
solar-positioning = "0.4"
toml = "0.9"
transpose = "0.2"
trash = "5.2"
tzf-rs = "1.1"
unicode-width = "0.2"
walkdir = "2.5.0"
zerocopy = "0.8.31"
zune-jpeg = "0.4"

# GUI
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
font-loader = "0.11"
wgpu = "27"
delaunator = "1.0.2"
walkers = "0.50"
zeroize = "1.8.2"

[profile.release]
opt-level = 3
debug = true
lto = false

[[bin]]
name = "phdupes"
path = "src/phdupes.rs"

[[bin]]
name = "phash_test"
path = "src/phash_test.rs"

[[bin]]
name = "position_test"
path = "src/position_test.rs"

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.5"
xattr = "1.6"

[features]
default = []
# To include the Sarasa font into binary, copy it to assets/fonts/Sarasa-Regular.ttc
# and run cargo build --release --features embed-fonts
embed-fonts = []

